# 24-Hotpot-visual-group-second-assessment

./: .gitignore  README.md
Question1-CPP/: CMakeLists.txt  calculator.cpp  random_number_creator.cpp
Question2-ROS2/miner_ws/install/: local_setup.sh  setup.sh
Question2-ROS2/miner_ws/install/mine_publisher/include/mine_publisher/: mine_publisher_node.hpp
Question2-ROS2/miner_ws/install/mine_publisher/lib/mine_publisher/: mine_publisher_node
Question2-ROS2/miner_ws/install/mine_publisher/share/mine_publisher/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Question2-ROS2/miner_ws/install/mine_service/include/mine_service/: mine_service_node.hpp
Question2-ROS2/miner_ws/log/: latest_build  latest_test
Question3-tf2/: frames_2023-09-07_14.11.46.gv
Question3-tf2/3-ROS-urdf-src/install/: local_setup.sh  setup.sh
Question3-tf2/3-ROS-urdf-src/log/: latest_build
Question3-tf2/3-ROS-urdf-src/src/look_buffer_transform/: CMakeLists.txt  package.xml
Question3-tf2/3-ROS-urdf-src/src/look_buffer_transform/src/: tf2_buffer.cpp
Question3-tf2/3-ROS-urdf-src/src/look_transform/: CMakeLists.txt  package.xml
Question3-tf2/3-ROS-urdf-src/src/look_transform/src/: tf2_looker.cpp
Question4-Nahsor/: CMakeLists.txt
Question4-Nahsor/include/nahsor/: nahsor_detector.hpp
Question4-Nahsor/src/: nahsor_detector.cpp  nahsor_main.cpp
Question5-gazebo/gazebo_ws/src/gazebo_car/: CMakeLists.txt  package.xml
(+223 files in other folders)
